k8s/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: twaddle-backend
  namespace: twaddle-api
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twaddle-backend
  namespace: twaddle-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: twaddle/api:latest
          resources:
            limits:
              memory: 200Mi
              cpu: "1"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads-storage
              mountPath: /usr/local/bin/twaddle/api/uploads
          imagePullPolicy: Never
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: twaddle-uploads
