k8s/cache.yml
apiVersion: v1
kind: Service
metadata:
  name: twaddle-cache
  namespace: twaddle-api
spec:
  selector:
    app: cache
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: twaddle-api
spec:
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: cache
          image: redis:latest
          resources:
            limits:
              memory: 200Mi
              cpu: "1"
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: cache-storage
              mountPath: /data
          imagePullPolicy: IfNotPresent
      volumes:
        - name: cache-storage
          persistentVolumeClaim:
            claimName: twaddle-redis
