k8s/database.yml
apiVersion: v1
kind: Service
metadata:
  name: twaddle-database
  namespace: twaddle-api
spec:
  selector:
    app: database
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twaddle-database
  namespace: twaddle-api
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mongo:latest
          resources:
            limits:
              memory: 200Mi
              cpu: "1"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: database-storage
              mountPath: /data/db
          imagePullPolicy: IfNotPresent
      volumes:
        - name: database-storage
          persistentVolumeClaim:
            claimName: twaddle-mongodb
