k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twaddle-ingress
  namespace: twaddle-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /twaddle/backend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: twaddle-backend
                port:
                  number: 3000
